Spectatorを使ったテストに変更
