# doc/openapi.yaml
@@ -173,21 +173,9 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  interview_datetime:
-                    type: string
-                    description: 面談日時
-                  interview_status:
-                    type: string
-                    description: 面談状況
-                  user_name:
-                    type: string
-                    description: ユーザー名
-                required:
-                  - interview_datetime
-                  - interview_status
-                  - user_name
+                type: array
+                items:
+                  $ref: '#/components/schemas/Interview'
         '201':
           description: Created
         '400':
@@ -210,6 +198,44 @@ paths:
           required: true
       description: ''
     parameters: []
+  '/api/company/interview/{interview_id}':
+    parameters:
+      - schema:
+          type: string
+        name: interview_id
+        in: path
+        required: true
+    get:
+      summary: Your GET endpoint
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Interview'
+        '201':
+          description: Created
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+        '500':
+          description: Internal Server Error
+      operationId: get-api-company-interview-interview_id
+      description: ''
+      parameters:
+        - schema:
+            type: string
+          in: header
+          name: Authorization
+          required: true
+          description: APItoken
 components:
   schemas:
     User:
@@ -250,11 +276,30 @@ components:
           description: パスワード
         profile:
           type: string
-          description: |
-            プロフィール
+          description: プロフィール
       required:
         - name
         - email
         - password
         - profile
+    Interview:
+      title: Interview
+      x-stoplight:
+        id: f11a2135fecdx
+      type: object
+      properties:
+        user_name:
+          type: string
+          description: ユーザー名
+        interview_datetime:
+          description: 面談日時
+          type:
+            - 'null'
+            - string
+        interview_status:
+          type: string
+          description: 面談状況
+      required:
+        - user_name
+        - interview_status
   securitySchemes: {}
