# routes/api.php
@@ -1,4 +1,5 @@
 <?php
+
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -23,6 +24,7 @@ Route::post('/company', '\App\Http\Controllers\CompanyController@createCompany')
 Route::post('/company/login', '\App\Http\Controllers\CompanyController@loginCompany')
     ->name('login');
 Route::middleware('auth:sanctum')
-    ->get('/company/interview/{interview_id?}', '\App\Http\Controllers\CompanyController@getInterview')
+    ->get('/company/interview', '\App\Http\Controllers\CompanyController@getInterview');
+Route::middleware('auth:sanctum')
+    ->get('/company/interview/{interview_id}', '\App\Http\Controllers\CompanyController@getInterview')
     ->where('interview_id', '^[0-9]+');
-
